--- a/ConvexHullEXPOESCOM/style.css
+++ b/ConvexHullEXPOESCOM/style.css
@@ -1,24 +1,21 @@
-#ch-body {
+#body {
         margin: 0;
         padding: 0px 0px 20px 0px;
         text-align: center;
     }
 
-    #ch-body h2 {
-        font-weight: 400;
-        height: 5%;
-    }
 
-    #ch-body #canvas {
-        height: 480px;
+
+    #body #canvas {
+        height: 800px;
         margin: 0 auto;
         text-align: left;
-        width: 640px;
+        width: 800px;
         padding-bottom: 10px;
         cursor: crosshair;
     }
 
-    #ch-body button {
+    #body button {
         font-size: 1.2em;
         width: 120px;
     }
